complete this card

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,14 +9,123 @@
     <!-- add custom css link -->
     <link rel="stylesheet" href="./css/style.css">
 
-    <!-- add font awesome kit -->
-
     <!-- add google font poppins link -->
-    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Noto+Sans+Bengali:wght@100;200;300;400;500;600;700;800;900&display=swap"
+        rel="stylesheet">
+
+
+    <!-- add font awesome kit -->
+    <script src="https://kit.fontawesome.com/20d6bc66e0.js" crossorigin="anonymous"></script>
+
 
     <title>product card</title>
 </head>
+
 <body>
-    
+    <main>
+        <!-- কোর্স সেকশন ডিজাইন শুরু -->
+        <section class="section-one global-section">
+            <div class="section-one-child global-section-child">
+                <h1 class="title">বিশেষ মূল্যছাড়!</h1>
+                <p>পুরো জুন মাস জুড়ে আমাদের বিভিন্ন কোর্স করা যাবে আরো সাশ্রয়ে!</p>
+                <div class="cards">
+                    <!-- card one -->
+                    <div class="card">
+                        <div class="card-details">
+                            <div class="course-details">
+                                <h2>English Grammar
+                                    <br>
+                                    <span>Courses</span>
+                                </h2>
+                                <p>
+                                    <del>৳ ১২০০</del>
+                                    <strong>৳ ৯৮০</strong>
+                                </p>
+                            </div>
+                            <div class="button">
+                                <a class="btn">Details</a>
+                            </div>
+                            <div class="badge">
+                                <p>big offer</p>
+                            </div>
+                        </div>
+                        <div class="hover-effect"></div>
+                    </div>
+                    <!-- card two -->
+                    <div class="card">
+                        <div class="card-details">
+                            <div class="course-details">
+                                <h2>IELTS
+                                    <span>Courses</span>
+                                </h2>
+                                <p>
+                                    <del>৳ ১২০০</del>
+                                    <strong>৳ ৯৮০</strong>
+                                </p>
+                            </div>
+                            <div class="button">
+                                <a class="btn">Details</a>
+                            </div>
+                            <div class="badge">
+                                <p>big offer</p>
+                            </div>
+                        </div>
+                        <div class="hover-effect"></div>
+                    </div>
+                    <!-- card three -->
+                    <div class="card">
+                        <div class="card-details">
+                            <div class="course-details">
+                                <h2>Web Development
+                                    <span>Courses</span>
+                                </h2>
+                                <p>
+                                    <del>৳ ১২০০</del>
+                                    <strong>৳ ৯৮০</strong>
+                                </p>
+                            </div>
+
+                            <div class="button">
+                                <a class="btn">Details</a>
+                            </div>
+                            <div class="badge">
+                                <p>big offer</p>
+                            </div>
+                        </div>
+                        <div class="hover-effect"></div>
+                    </div>
+                    <!-- card one -->
+                    <div class="card">
+                        <div class="card-details">
+                            <div class="course-details">
+                                <h2>Machine Learning
+                                    <br>
+                                    <span>Courses</span>
+                                </h2>
+                                <p>
+                                    <del>৳ ১২০০</del>
+                                    <strong>৳ ৯৮০</strong>
+                                </p>
+                            </div>
+                            <div class="button">
+                                <a class="btn">Details</a>
+                            </div>
+                            <div class="badge">
+                                <p>big offer</p>
+                            </div>
+                        </div>
+                        <div class="hover-effect"></div>
+                    </div>
+
+
+                </div>
+            </div>
+        </section>
+        <!-- কোর্স সেকশন ডিজাইন শেষ -->
+    </main>
 </body>
+
 </html>
