chnage some css style

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                                     <span>Courses</span>
                                 </h2>
                                 <p>
-                                    <del>৳ ১২০০</del>
+                                    <del>৳ ১২০০</del> &nbsp;
                                     <strong>৳ ৯৮০</strong>
                                 </p>
                             </div>
@@ -62,7 +62,7 @@
                                     <span>Courses</span>
                                 </h2>
                                 <p>
-                                    <del>৳ ১২০০</del>
+                                    <del>৳ ১২০০</del>&nbsp;
                                     <strong>৳ ৯৮০</strong>
                                 </p>
                             </div>
@@ -83,7 +83,7 @@
                                     <span>Courses</span>
                                 </h2>
                                 <p>
-                                    <del>৳ ১২০০</del>
+                                    <del>৳ ১২০০</del>&nbsp;
                                     <strong>৳ ৯৮০</strong>
                                 </p>
                             </div>
@@ -106,7 +106,7 @@
                                     <span>Courses</span>
                                 </h2>
                                 <p>
-                                    <del>৳ ১২০০</del>
+                                    <del>৳ ১২০০</del>&nbsp;
                                     <strong>৳ ৯৮০</strong>
                                 </p>
                             </div>
